@@ -3,13 +3,15 @@ package org.cloudfoundry.identity.uaa.oauth.refresh;
 import com.google.common.collect.Maps;
 import org.cloudfoundry.identity.uaa.oauth.*;
 import org.cloudfoundry.identity.uaa.oauth.jwt.JwtHelper;
-import org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants;
+import org.cloudfoundry.identity.uaa.oauth.token.Claims;
 import org.cloudfoundry.identity.uaa.user.UaaUser;
-import org.cloudfoundry.identity.uaa.util.JsonUtils;
 import org.cloudfoundry.identity.uaa.util.TimeService;
+import org.cloudfoundry.identity.uaa.util.JwtTokenSignedByThisUAA;
+import org.cloudfoundry.identity.uaa.util.UaaStringUtils;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
+import org.cloudfoundry.identity.uaa.zone.TokenPolicy;
 import org.springframework.security.authentication.InternalAuthenticationServiceException;
-import org.springframework.security.oauth2.common.exceptions.InsufficientScopeException;
+import org.cloudfoundry.identity.uaa.oauth.common.exceptions.InsufficientScopeException;
 
 import java.util.*;
 
@@ -24,15 +26,15 @@ public class RefreshTokenCreator {
     private final TokenValidityResolver refreshTokenValidityResolver;
     private final TokenEndpointBuilder tokenEndpointBuilder;
     private TimeService timeService;
-    private KeyInfoService keyInfoService;
+    private final KeyInfoService keyInfoService;
 
-    private final String UAA_REFRESH_TOKEN = "uaa.offline_token";
+    private static final String UAA_REFRESH_TOKEN = "uaa.offline_token";
 
     public RefreshTokenCreator(boolean isRestrictRefreshGrant,
-                               TokenValidityResolver refreshTokenValidityResolver,
-                               TokenEndpointBuilder tokenEndpointBuilder,
-                               TimeService timeService,
-                               KeyInfoService keyInfoService) {
+            TokenValidityResolver refreshTokenValidityResolver,
+            TokenEndpointBuilder tokenEndpointBuilder,
+            TimeService timeService,
+            KeyInfoService keyInfoService) {
         this.isRestrictRefreshGrant = isRestrictRefreshGrant;
         this.refreshTokenValidityResolver = refreshTokenValidityResolver;
         this.tokenEndpointBuilder = tokenEndpointBuilder;
@@ -41,8 +43,8 @@ public class RefreshTokenCreator {
     }
 
     public CompositeExpiringOAuth2RefreshToken createRefreshToken(UaaUser user,
-                                                         RefreshTokenRequestData tokenRequestData,
-                                                         String revocableHashSignature) {
+            RefreshTokenRequestData tokenRequestData,
+            String revocableHashSignature) {
 
         String grantType = tokenRequestData.grantType;
         Set<String> scope = tokenRequestData.scopes;
@@ -67,14 +69,13 @@ public class RefreshTokenCreator {
     }
 
     private String buildJwtToken(UaaUser user,
-                                 RefreshTokenRequestData tokenRequestData,
-                                 String revocableHashSignature,
-                                 String grantType,
-                                 Map<String, String> additionalAuthorizationAttributes,
-                                 Date expirationDate,
-                                 String tokenId) {
-        String content;
-        try {
+            RefreshTokenRequestData tokenRequestData,
+            String revocableHashSignature,
+            String grantType,
+            Map<String, String> additionalAuthorizationAttributes,
+            Date expirationDate,
+            String tokenId) {
+
             Map<String, Object> claims = new LinkedHashMap<>();
 
             claims.put(JTI, tokenId);
@@ -84,8 +85,8 @@ public class RefreshTokenCreator {
             claims.put(CLIENT_ID, tokenRequestData.clientId);
             claims.put(ISS, tokenEndpointBuilder.getTokenEndpoint(IdentityZoneHolder.get()));
             claims.put(ZONE_ID, IdentityZoneHolder.get().getId());
-            claims.put(AUD, tokenRequestData.resourceIds);
-            claims.put(GRANTED_SCOPES, tokenRequestData.scopes);
+            claims.put(AUD, UaaStringUtils.getValuesOrDefaultValue(tokenRequestData.resourceIds, tokenRequestData.clientId));
+        claims.put(GRANTED_SCOPES, tokenRequestData.scopes);
 
             if (null != tokenRequestData.authenticationMethods && !tokenRequestData.authenticationMethods.isEmpty()) {
                 claims.put(AMR, tokenRequestData.authenticationMethods);
@@ -114,24 +115,20 @@ public class RefreshTokenCreator {
                 claims.put(SUB, user.getId());
             }
 
-            if (tokenRequestData.revocable) {
-                claims.put(ClaimConstants.REVOCABLE, true);
-            }
-
-            if (hasText(revocableHashSignature)) {
-                claims.put(REVOCATION_SIGNATURE, revocableHashSignature);
-            }
-
-            content = JsonUtils.writeValueAsString(claims);
-        } catch (JsonUtils.JsonUtilException e) {
-            throw new IllegalStateException("Cannot convert access token to JSON", e);
+        if (tokenRequestData.revocable) {
+            claims.put(REVOCABLE, true);
         }
-        return JwtHelper.encode(content, getActiveKeyInfo()).getEncoded();
+
+        if (hasText(revocableHashSignature)) {
+            claims.put(REVOCATION_SIGNATURE, revocableHashSignature);
+        }
+
+        return JwtHelper.encode(claims, getActiveKeyInfo()).getEncoded();
     }
 
     private KeyInfo getActiveKeyInfo() {
         return ofNullable(keyInfoService.getActiveKey())
-            .orElseThrow(() -> new InternalAuthenticationServiceException("Unable to sign token, misconfigured JWT signing keys"));
+                .orElseThrow(() -> new InternalAuthenticationServiceException("Unable to sign token, misconfigured JWT signing keys"));
     }
 
     /**
@@ -145,10 +142,11 @@ public class RefreshTokenCreator {
     protected boolean isRefreshTokenSupported(String grantType, Set<String> scope) {
         if (!isRestrictRefreshGrant) {
             return GRANT_TYPE_AUTHORIZATION_CODE.equals(grantType) ||
-                GRANT_TYPE_PASSWORD.equals(grantType) ||
-                GRANT_TYPE_USER_TOKEN.equals(grantType) ||
-                GRANT_TYPE_REFRESH_TOKEN.equals(grantType) ||
-                GRANT_TYPE_SAML2_BEARER.equals(grantType);
+                    GRANT_TYPE_PASSWORD.equals(grantType) ||
+                    GRANT_TYPE_USER_TOKEN.equals(grantType) ||
+                    GRANT_TYPE_REFRESH_TOKEN.equals(grantType) ||
+                    GRANT_TYPE_SAML2_BEARER.equals(grantType) ||
+                    GRANT_TYPE_JWT_BEARER.equals(grantType);
         } else {
             return scope.contains(UAA_REFRESH_TOKEN);
         }
@@ -156,7 +154,7 @@ public class RefreshTokenCreator {
 
     public void ensureRefreshTokenCreationNotRestricted(ArrayList<String> tokenScopes) {
         if (isRestrictRefreshGrant && !tokenScopes.contains(UAA_REFRESH_TOKEN)) {
-            throw new InsufficientScopeException(String.format("Expected scope %s is missing", UAA_REFRESH_TOKEN));
+            throw new InsufficientScopeException("Expected scope %s is missing".formatted(UAA_REFRESH_TOKEN));
         }
     }
 
@@ -166,5 +164,28 @@ public class RefreshTokenCreator {
 
     public void setTimeService(TimeService timeService) {
         this.timeService = timeService;
+    }
+
+    public boolean shouldRotateRefreshTokens(String clientAuth) {
+        return getActiveTokenPolicy().isRefreshTokenRotate() || CLIENT_AUTH_NONE.equals(clientAuth);
+    }
+
+    private Map<String, Object> getRefreshedTokenMap(Claims claims) {
+        claims.setJti(UUID.randomUUID().toString().replace("-", "") + REFRESH_TOKEN_SUFFIX);
+        return claims.getClaimMap();
+    }
+
+    public String createRefreshTokenValue(JwtTokenSignedByThisUAA jwtToken, Claims claims, String clientAuth) {
+        String refreshTokenValue;
+        if (shouldRotateRefreshTokens(clientAuth)) {
+            refreshTokenValue = JwtHelper.encode(getRefreshedTokenMap(claims), getActiveKeyInfo()).getEncoded();
+        } else {
+            refreshTokenValue = jwtToken.getJwt().getEncoded();
+        }
+        return refreshTokenValue;
+    }
+
+    private TokenPolicy getActiveTokenPolicy() {
+        return IdentityZoneHolder.get().getConfig().getTokenPolicy();
     }
 }
